crates/swc_css_parser/tests/errors/number/dot/output.stderr
error: Expected a property value
 --> $DIR/tests/errors/number/dot/input.css:1:11
  |
1 | a { width: 0.; }
  |           ^^^

